hphp/hack/test/typecheck/reactive/mayberx7_2.php.exp
File "mayberx7_2.php", line 11, characters 10-59:
Reactive functions can only call other reactive functions. (Typing[4200])
File "mayberx7_2.php", line 4, characters 10-16:
This function is non-reactive.
File "mayberx7_2.php", line 11, characters 18-58:
This argument caused function to be non-reactive.
